2004-09-19    <jeff@mini.nerble.net>

	* mapedit/shapeedit.cc, shapes/items.cc, files/msgfile.cc: Support
	more than 1024 shapes in item names by storing messages in
	"textmsg.txt".

2004-09-18    <jeff@mini.nerble.net>

	* shapes/items.h,etc: Reorganized lists of text to prepare for
	supporting >1024 shapes.

2004-09-13    <jeff@mini.nerble.net>

	* schedule.cc:  Support thief schedule.

2004-09-06    <jeff@mini.nerble.net>

	* gamemap.cc,Flex.cc,Flex.h: Write Vers2 u7ifix files, so that
	shapes >1023 are supported.

2004-09-05    <jeff@mini.nerble.net>

	* gamemap.cc: Added code to read Vers.2 entries (although we don't
	write them yet).

2004-08-29    <jeff@mini.nerble.net>

	* shapes/shapevga.cc (Shapes_vga_file): Resize 'info' list when a
	new shape is added.

2004-08-28    <jeff@mini.nerble.net>

	* shapeid.cc (Shape_manager): Set up shape info. entries for the
	SI Avatar shapes here.
	* shapes/shapevga.h:  No longer have to check for the SI Avatar shapes.

2004-08-27    <jeff@mini.nerble.net>

	* gamemap.cc, objs/*:  Save/restore ireg. objs. with shape # >= 1024.

2004-08-14 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated documentation and FAQ
	* docs/xml/html.xsl: got rid of another pointer to our ML
	* docs/ReadMe.html,FAQ.html: updated documentation and FAQ
	* Readme, FAQ: updated
	* ReadMe.1st: got rid of another pointer to our ML
	
2004-08-06    <jeff@mini.nerble.net>

	* drag.cc (Dragging_info): Avoid dropping an object where it is no
	longer accessible.

2004-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: use real infinity symbol in SI
	* Spellbook_gump.cc: show infinity (in SI) or 99 (in BG) in wizard mode

2004-08-03  Max Horn  <max@quendi.de>

	* exult.cc: Don't set icon on OS X; the external icon is *much* nicer.

2004-07-11    <jeff@mini.nerble.net>

	* actors.cc,combat.cc,etc.:  Support for 'charmed' flag.

2004-07-04    <jeff@mini.nerble.net>
